# youtube-transcript-mcp

./: .gitignore  README.md  install.sh  pyproject.toml  requirements.txt  youtube_transcript_mcp.py
.claude-plugin/: plugin.json
