[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "youtube-transcript-mcp"
version = "1.0.0"
description = "YouTube transcript extraction MCP server - no API key required"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "youtube-transcript-api>=0.6.0",
    "pydantic>=2.0.0",
]

[project.scripts]
youtube-transcript-mcp = "youtube_transcript_mcp:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["youtube_transcript_mcp.py"]
